2003-01-03  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/test/test_nsdata.py (TestNSData.testBytes): Added test
      for NSData.
    * Modules/Cocoa/_Fnd_NSData.inc: Added support for -bytes.
    * Added support for mutableBytes

2003-01-01  Bill Bumgarner  <bbum@codefab.com>

    * Project Templates/Cocoa-Python Application/bin-python-main.m: Added
    Cocoa/Cocoa.h in hopes that it'll fix indexing.

    * Project Templates/Cocoa-Python
    Application/CocoaApp.pbproj/TemplateInfo.plist: Added __main__.py,
    removed Main.py

    * Examples/CurrencyConverter/00README.txt: Created a simple README
    describing how to build the CurrencyConverter example.s a

    * Examples/addressbook.py (me): Checked to make sure there is really a
    'me' card in the address book.  If the user hadn't marked a card as 'This
    is my card', the script tossed an exception.

2002-12-23 Ronald Oussoren <oussoren@cistron.nl>
    * Automaticly convert 'self' argument to Objective-C if it is a Python
      string, or int (just like for other arguments). This allows calls like
      >>> NSString.localizedCaseInsensitiveCompare_('foo','bar')
     
2002-12-22 Ronald Oussoren <oussoren@cistron.nl>
    * Introduce support for libffi. For now the only advantages are a faster
      build and smaller libraries.

2002-12-19  Bill Bumgarner  <bbum@codefab.com>
    * RELEASE 0.8
    * Modules/Cocoa/_Foundation.m (and others):  Added #ifdefs that will only
    import the files if on 10.2 or greater.   This provides the foundation for
    10.1 compatibility, but the autogenerators and other pieces need to be put
    into places.

2002-12-17  Bill Bumgarner  <bbum@codefab.com>

    * Project Templates/Cocoa-Python Application/MyAppDelegate.py: Moved to
    AutoBaseClass.  Added significant documentation.

    * Project Templates/Cocoa-Python Application/bin-python-main.m: Integrated
    all of Jack's, Ronald's and my suggestions/patches/changes (that I could
    remember).
